--- a/.env
+++ b/.env
@@ -3,10 +3,12 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
 # Connect to Supabase via connection pooling
-DATABASE_URL="postgresql://postgres.taghpychqwjikiqvhrpz:Madagascar@pass1@aws-1-eu-west-2.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DATABASE_URL="postgresql://postgres.hhbmzadzsdlqqscsahbq:Guinea@pass1@aws-1-eu-west-3.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
 # Direct connection to the database. Used for migrations
-DIRECT_URL="postgresql://postgres.taghpychqwjikiqvhrpz:Madagascar@pass1@aws-1-eu-west-2.pooler.supabase.com:5432/postgres"
+DIRECT_URL="postgresql://postgres.hhbmzadzsdlqqscsahbq:Guinea@pass1@aws-1-eu-west-3.pooler.supabase.com:5432/postgres"
+
 
 NEXTAUTH_SECRET=secret
